--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -161,6 +161,11 @@ hr.small {
     background-size: cover;
     -o-background-size: cover;
 }
+.list-inline {
+    display: inline block;
+    padding-right: 5px;
+    padding-left: 5px;
+}
 
 /* About */
 
@@ -177,6 +182,7 @@ hr.small {
 .service-item {
     margin-bottom: 30px;
 }
+
 
 /* Callout */
 
