--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -190,8 +190,8 @@ hr.small {
     display: table;
     width: 100%;
     height: 400px;
-    color: #fff;
-    background: url(../img/callout.jpg) no-repeat center center scroll;
+    color: black;
+    background: url(../img/breath-of-wild.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -210,6 +210,9 @@ hr.small {
 
 .img-portfolio {
     margin: 0 auto;
+    width: 500px;
+    height: 333px;
+
 }
 
 .img-portfolio:hover {
