--- a/storeapp/Storeapp.css
+++ b/storeapp/Storeapp.css
@@ -1,16 +1,18 @@
 body {
-	width: 1000px;
-	background: url(img/hyrule-field.jpg) left top repeat;
+	width: 99.4%;
+	background: url(img/hyrule-field.jpg);	
 }
+
+
+
 #main-header {
 	position: relative;
-	width: 1500px;
+	width: 99.4%;
 	border: solid black;
-	background-color: black;
+	background-color: transparent;
 	border-radius: 25px;
 }
 
-/*Logo*/
 .logo {
 	height: 100px;
 	width: 100px;
@@ -27,10 +29,10 @@ body {
 #header-name {
 	font-size: 65px;
 	color: yellow;
-	padding: 15px;
+	/*padding: px;*/
 	margin: 8px 0px 0px 0px;
 	position: relative;
-	right: 25px;
+	right: 105px;
 	left: 300px;
 	top: -15px;
 
@@ -47,7 +49,7 @@ body {
 }
 
 
-/* Banner Section */
+/* Banner Section 
 #main-image{
 	float: left;
 	width: 700px;
@@ -66,7 +68,7 @@ body {
 	position: relative;
 	top: 550px;
 	color: yellow;
-	background-color: black;
+	background-color: transparent;
 	border-radius: 25px;
 }
 
@@ -78,18 +80,41 @@ body {
 
 }
 
+#recent-news a {
+	color: yellow;
+	font-size: 20px;
+}
+iframe:focus { 
+    outline: none;
+}
+
+iframe[seamless] { 
+    display: block;
+}
+iframe {
+	border: solid black;
+	border-radius: 5px;
+	position: relative;
+	left: 180px;
+	top: 120px;
+}
+
 
 
 .products {
 	float: right;
 	position: relative;
-	left: 450px;
+	left: -5px;
 	color: yellow;
 	font-size: 20px;
+	font-weight:;
 	border: solid black;
-	background-color: black;
+	background-color: transparent;
 	border-radius: 25px;
-	top: -15px;
+	top: 15px;
+}
+.products a {
+	color: yellow;
 }
 /*character of the day*/
 .stuff {
@@ -99,8 +124,8 @@ body {
 	border: solid black;
 	border-radius: 25px;
 	width: 360px;
-	height: 550px;
-	background-color: black;
+	height: 525px;
+	background-color: transparent;
 	
 }
 figcaption {
@@ -142,12 +167,11 @@ aside {
 /*footer*/
 footer {
 	clear: both;
-	width: 150%;
-	margin: 0px 0px 0px 0px;
-	padding: 0px 0px 0px 0px;
+	width: 50%;
 	border: solid black;
 	border-radius: 25px;
 	color: yellow;
-	background-color: black;
+	background-color: transparent;
+
 
 }
