--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -191,11 +191,12 @@ hr.small {
     width: 100%;
     height: 400px;
     color: black;
-    background: url(../img/breath-of-wild.jpg) no-repeat center center scroll;
+    background: url(../img/better-background.jpg) no-repeat center center scroll;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
+    
 }
 
 /* Portfolio */
